--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <p id='server-time'></p>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io();
+      var socket = io.connect('http://startupbddy.herokuapp.com/:8080');
       var el = document.getElementById('server-time');
 
       socket.on('time', function(timeString) {
